Fixes horizontal scroll issue on small mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,6 @@ h4 {
 }
 
 body {
-  width: 100%;
   height: auto;
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
@@ -417,8 +416,7 @@ body {
 }
 
 .main-container {
-  width: 100%;
-  /*vw*/
+  width: 100vw;
   background-color: #fff;
 }
 
