--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -20,7 +20,6 @@
 }
 
 body {
-    width: 100%;
     height: auto;
     font-family: $font-family-stack;
     font-weight: $font-weight-reg;
@@ -28,8 +27,7 @@ body {
 }
 
 .main-container {
-    width: 100%;
-    /*vw*/
+    width: 100vw;
     background-color: #fff;
 }
 
